# notes

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: PyTorchでMNIST.ipynb  PyTorchで線形回帰.ipynb
