[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Meg-Ssk"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
